--- a/exploracion.ipynb
+++ b/exploracion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
+    "from joblib import dump\n",
     "from scipy.spatial import distance\n",
     "from scipy.stats.distributions import  chi2\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -2551,7 +2552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MODELOS"
+    "# MODELOS"
    ]
   },
   {
@@ -3491,7 +3492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -3654,7 +3655,7 @@
        "0                sex  0.692786"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4355,6 +4356,18 @@
     "print(f'F1: {f1_sc}')\n",
     "print(f'ROC-AUC: {roc_auc}')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm.iolib.smpickle.save_pickle(resultLogit, 'model.pickle')\n",
+    "dump(result1, 'model_2.pickle')\n",
+    "np.save('X_test.npy', X_test_z_log)\n",
+    "np.save('Y_test.npy', Y_test)\n"
    ]
   }
  ],
